[package]
name = "gradient_knob"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "gradient_knob"

[dependencies]
# key MUST be nih_plug with underscore, not nih-plug
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "__NIH_PLUG_SHA__" }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git", rev = "__NIH_PLUG_SHA__" }

# ceiling pins for Rust 1.77.2 - cargo 1.77 can't parse edition = "2024"
time = "=0.3.37"
zerofrom = "=0.1.5"
zerovec = "=0.10.4"
base64ct = "=1.6.0"
home = "=0.5.9"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"